<resources>
    <string name="app_name">RJ ID</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="chatsapp_will_send_an_sms_message_to_verify_your_phone_number">RJ ID will send an SMS message to verify your phone number.</string>
    <string name="str_con">Continue</string>
    <string name="dis">Img</string>
    <string name="enter_the_otp_code_to_verify_your_phone_number">Enter the OTP code to verify your phone number.</string>
    <string name="verify_923001234567">Verify +923001234567</string>
    <string name="type_a_message">Type a message…</string>
    <string name="online">Online</string>
    <string name="rony_ahmed">Rony Ahmed</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="video_call">Video Call</string>
    <string name="audio_call">Audio Call</string>
    <string name="block">Block</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="groups">Groups</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="textview">TextView</string>
    <string name="type_your_name">Type your name</string>
    <string name="please_set_your_name_and_an_optional_profile_image">Please set your name and an optional profile image.</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="profile_info">Profile Info</string>
    <string name="sample_name">Sample Name</string>
    <string name="tap_to_chat">Tap to chat</string>
</resources>